frame/support/test/tests/derive_impl_ui/bad_disambiguation_path.stderr
error[E0405]: cannot find trait `Insect` in this scope
  --> tests/derive_impl_ui/bad_disambiguation_path.rs:38:35
   |
38 | #[derive_impl(FourLeggedAnimal as Insect)]
   |                                   ^^^^^^ not found in this scope
